--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cake Selling Business</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="javascript" href="script.js">
 </head>
 <body>
     
